--- a/client/src/components/Styles.module.css
+++ b/client/src/components/Styles.module.css
@@ -5,3 +5,29 @@
     border-radius: 4px;
     padding: 5px;
 }
+
+.basecontainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.header{
+    font-size: 24px;
+    font-family: "Open Sans", sans-serif;
+    padding: 10px;
+}
+
+.content{
+    display: flex;
+    flex-direction: column;
+}
+
+.form{
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+}
