--- a/client/src/components/Styles.module.css
+++ b/client/src/components/Styles.module.css
@@ -29,5 +29,24 @@
     margin: 15px;
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: center;
+}
+
+.label{
+    font-size: 20px;
+}
+
+
+.input{
+    margin-top: 6px;
+    min-width: 18em;
+    height: 37px;
+    padding: 0px 10px;
+    font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
+    background-color: #f3f3f3;
+    border: 0;
+    border-radius: 4px;
+    margin-bottom: 31px;
+    transition: all 250ms ease-in-out;
 }
