--- a/client/src/components/Styles.module.css
+++ b/client/src/components/Styles.module.css
@@ -1,4 +1,4 @@
-.image{
+.image {
     width: 400px;
     height: auto;
     border-radius: 50%;
@@ -6,44 +6,42 @@
     padding: 5px;
 }
 
-.basecontainer{
+.basecontainer {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
-.header{
+.header {
     font-size: 24px;
     font-family: "Open Sans", sans-serif;
     padding: 10px;
 }
 
-.content{
+.content {
     display: flex;
     flex-direction: column;
 }
 
-.form{
+.form {
     margin: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.label{
+.label {
     font-size: 20px;
 }
 
-
-.input{
+.input {
     margin-top: 6px;
     min-width: 18em;
     height: 37px;
     padding: 0px 10px;
     font-size: 16px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     background-color: #f3f3f3;
     border: 0;
     border-radius: 4px;
