--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -33,10 +33,8 @@
 
 /* Dashboard page classes */
 .sideMenu {
-    width: 33vw;
-    height: 100vh;
     font-family: var(--font-family);
-    color: var(--colour-background);
+    background-color: var(--colour-background);
     font-size: var(--text-medium);
 }
 
