--- a/client/src/views/NotesView/ProfileImage.module.css
+++ b/client/src/views/NotesView/ProfileImage.module.css
@@ -1,21 +1,23 @@
-.image {
-    height: 10px;
-    border-radius: 10%;
-    height: 50px;
-}
-
-.imageSection {
-    display: flex;
-}
-
-.container {
+.horizontal {
+    max-width: 10%;
     display: flex;
     flex-direction: row;
-    align-items: left;
-    margin-bottom: 0px;
+    align-items: center;
 }
 
-.name {
+.image {
     display: flex;
+    width: 60px;
+    align-items: center;
     justify-content: center;
+}
+
+.text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    margin-bottom: 50px;
+    width: 100%;
 }
