--- a/client/src/views/SettingsView/ColourBlocks.module.css
+++ b/client/src/views/SettingsView/ColourBlocks.module.css
@@ -2,9 +2,23 @@
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
 
-    margin-top: 10%;
+    margin-top: 5%;
     background-color: #eee;
+    height: 50%;
 }
 
 .block {
+    margin-top: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.colour {
+    height: 80%;
+    margin-top: 0;
+}
+
+.dark {
+    background-color: cornflowerblue;
+    margin-top: 0;
 }
