--- a/client/src/views/NotesView/NotesView.module.css
+++ b/client/src/views/NotesView/NotesView.module.css
@@ -1,13 +1,37 @@
-.container {
-    width: 33vw;
-    height: 100vh;
-    background-color: #d4e6fa;
+/* For the profile, tag icon  and side menu */
+.containerLeft {
+    padding-top: 10px;
+    padding-left: 10px;
+    display: flex;
+    width: 20%;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+/* For the search bar and help (question mark) */
+.containerRight {
+    padding-top: 20px;
+    padding-right: 60px;
+    display: flex;
+    width: 250px;
+    height: 70px;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+/* Formats the side menu */
+.sideContainer {
+    display: flex;
+    width: 50px;
+    padding-top: 5vh;
+    flex-direction: column;
+    align-items: center;
 }
 
 .menu {
     display: flex;
-    padding-top: 5%;
     flex-direction: column;
-    width: 10%;
     height: 100vh;
+    padding-top: 10px;
+    padding-left: 10px;
 }
