--- a/client/src/views/NotesView/ProfileImage.module.css
+++ b/client/src/views/NotesView/ProfileImage.module.css
@@ -1,25 +1,24 @@
+/* Container for user profile */
 .horizontal {
-    max-width: 10%;
+    width: 50vw;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
+/* Profile picture */
 .image {
-    display: flex;
-    padding-left: 5%;
-    padding-top: 5%;
-    width: 60px;
+    width: 40px;
     align-items: center;
     justify-content: center;
 }
 
+/* User name */
 .text {
+    width: 70%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: row;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-    margin-bottom: 50px;
-    width: 100%;
+    padding-left: 15px;
 }
