--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -26,6 +26,8 @@
 .light {
     background-color: var(--colour-background);
     display: flex;
+    height: 100%;
+    width: 100%;
     justify-content: space-between;
 }
 
