--- a/client/src/views/NotesView/ProfileImage.module.css
+++ b/client/src/views/NotesView/ProfileImage.module.css
@@ -1,6 +1,6 @@
 /* Container for user profile */
 .horizontal {
-    width: 50vw;
+    white-space: nowrap;
     display: flex;
     flex-direction: row;
     align-items: center;
