--- a/client/src/views/DashboardView/DashboardView.module.css
+++ b/client/src/views/DashboardView/DashboardView.module.css
@@ -1,9 +1,13 @@
+/* container for the pfp*/
 .topcontainer {
     display: flex;
     width: 100%;
     height: 10vh;
+    padding-top: 10px;
+    padding-left: 10px;
 }
 
+/* Container for the greeting, date, and link to all notes*/
 .midContainer {
     display: flex;
     width: 62%;
@@ -12,6 +16,7 @@
     align-content: top;
 }
 
+/* Container for the Icons for calendar and notes*/
 .bottomContainer {
     display: flex;
     width: 75%;
@@ -49,12 +54,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.header {
-    font-size: 24px;
-    font-family: "Open Sans", sans-serif;
-    padding: 10px;
 }
 
 .date {
