changed some app.module.css .light css, added notes container

--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -26,9 +26,10 @@
 .light {
     background-color: var(--colour-background);
     display: flex;
+    flex-direction: row;
     height: 100%;
     width: 100%;
-    justify-content: space-between;
+    padding: 0.5rem;
 }
 
 .dark {
