--- a/client/src/views/NotesView/dragAndDrop.module.css
+++ b/client/src/views/NotesView/dragAndDrop.module.css
@@ -1,7 +1,7 @@
 .notesSection {
     background-color: rgb(238, 153, 153);
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 0.5rem;
 
     margin-top: 7.5rem;
@@ -11,9 +11,11 @@
     width: 100%;
     padding: 0.5rem;
     border-radius: 10px;
+
+    align-items: start;
 }
 
-.group {
+.column {
     display: flex;
     flex-direction: column;
     background-color: cornflowerblue;
