--- a/client/src/views/NotesView/dragAndDrop.module.css
+++ b/client/src/views/NotesView/dragAndDrop.module.css
@@ -13,6 +13,9 @@
     border-radius: 10px;
 
     align-items: start;
+
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .column {
@@ -21,6 +24,8 @@
     background-color: cornflowerblue;
     border-radius: 10px;
     padding: 0.5rem;
+    /* To get rid of bullet points in list */
+    list-style-type: none;
 }
 
 .item {
@@ -34,6 +39,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    user-select: "none";
+    min-height: "50px";
 }
 
 .item:not(:last-of-type) {
