--- a/client/src/views/NotesView/dragAndDrop.module.css
+++ b/client/src/views/NotesView/dragAndDrop.module.css
@@ -12,8 +12,6 @@
     padding: 0.5rem;
     border-radius: 10px;
 
-    align-items: start;
-
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -24,12 +22,14 @@
     background-color: cornflowerblue;
     border-radius: 10px;
     padding: 0.5rem;
+
+    height: 100%;
     /* To get rid of bullet points in list */
     list-style-type: none;
 }
 
 .item {
-    min-height: 150px;
+    min-height: 200px;
     padding: 1rem;
     color: cornsilk;
     background-color: darkgrey;
