--- a/client/src/views/DashboardView/DashboardView.module.css
+++ b/client/src/views/DashboardView/DashboardView.module.css
@@ -26,27 +26,31 @@
 /* Container for event notes */
 .eventsContainer {
     display: flex;
-    width: 40%;
+    width: 38%;
     flex-direction: row;
+    background-color: rgb(255, 223, 248);
 }
 
 /* Container for pinned notes */
 .pinnedContainer {
     display: flex;
-    width: 40%;
+    width: 37%;
     flex-direction: row;
+    background-color: rgb(255, 223, 248);
 }
 
 /* Container for Calenter icon */
 .calendarContainer {
     display: flex;
-    width: 10%;
+    width: 8%;
+    background-color: rgb(216, 244, 253);
 }
 
 /* Container for thumbtack icon */
 .tumbtackContainer {
     display: flex;
-    width: 10%;
+    width: 8%;
+    background-color: rgb(216, 244, 253);
 }
 
 .viewAllNotesContainer {
