--- a/client/src/views/NotesView/NotesView.module.css
+++ b/client/src/views/NotesView/NotesView.module.css
@@ -22,17 +22,21 @@
 /* Formats the side menu */
 .sideContainer {
     display: flex;
-    width: 50px;
+    height: 90vh;
+    width: 150px;
     padding-top: 5vh;
     flex-direction: column;
     align-items: center;
+}
+set {
+    margin-bottom: auto;
 }
 
 .menu {
     display: flex;
     flex-direction: column;
-    height: 70vh;
+    width: 200px;
     padding-top: 10px;
     padding-left: 10px;
-    align-items: center;
+    align-items: left;
 }
