--- a/client/src/views/DashboardView/DashboardView.module.css
+++ b/client/src/views/DashboardView/DashboardView.module.css
@@ -10,7 +10,20 @@
 /* Container for the greeting, date, and link to all notes*/
 .midContainer {
     display: flex;
-    width: 62%;
+    width: 73%;
+    align-items: stretch;
+    flex-direction: row;
+    align-content: top;
+}
+
+.margin {
+    display: flex;
+    width: 7%;
+}
+
+.midContentContainer {
+    display: flex;
+    width: 93%;
     align-items: stretch;
     flex-direction: row;
     align-content: top;
@@ -26,15 +39,21 @@
 /* Container for event notes */
 .eventsContainer {
     display: flex;
-    width: 38%;
+    width: 32%;
     flex-direction: column;
     align-items: stretch;
 }
 
-/* Container for pinned notes */
-.pinnedContainer {
+/* Container for left column of pinned notes */
+.pinnedLeftContainer {
     display: flex;
-    width: 39%;
+    width: 30%;
+    flex-direction: column;
+}
+
+.pinnedRightContainer {
+    display: flex;
+    width: 30%;
     flex-direction: column;
 }
 
@@ -47,7 +66,7 @@
 /* Container for thumbtack icon */
 .tumbtackContainer {
     display: flex;
-    width: 7%;
+    width: 5%;
 }
 
 /* eventNote box*/
