--- a/client/src/views/DashboardView/DashboardView.module.css
+++ b/client/src/views/DashboardView/DashboardView.module.css
@@ -125,8 +125,10 @@
 }
 
 .date {
+    color: #707070;
+    font-size: 20px;
     margin-bottom: 0px;
-    margin-top: 20px;
+    margin-top: 15px;
     display: flex;
     flex-direction: column;
     align-items: left;
