--- a/client/src/views/RegisterView/RegisterView.module.css
+++ b/client/src/views/RegisterView/RegisterView.module.css
@@ -1,73 +1,46 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
+
 .container {
-    margin: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.image {
-    width: 110px;
-    align-items: center;
-    display: flex;
+.logo {
+    margin-top: 12%;
+    max-width: 10%;
     height: auto;
-    border-radius: 50%;
-    border-radius: 4px;
 }
 
-.basecontainer {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.title {
+    margin-top: 2%;
+    font-family: "Lato", sans-serif;
+    font-size: 55px;
 }
 
-.header {
-    font-size: 24px;
-    font-family: "Open Sans", sans-serif;
-    padding: 10px;
+.subtitle {
+    margin-top: 4%;
+    font-family: "Lato", sans-serif;
+    font-size: 1.6vw;
 }
 
-.content {
-    display: flex;
-    flex-direction: column;
-}
-
-.form {
-    margin: 0px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.label {
+.inputTitle {
+    margin-top: 10%;
+    margin-bottom: 3%;
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
     font-size: 15px;
 }
 
-.input {
-    margin-top: 6px;
-    min-width: 18em;
-    height: 37px;
-    padding: 0px 10px;
-    font-size: 16px;
-    font-family: "Open Sans", sans-serif;
-    background-color: #f3f3f3;
-    border: 0;
-    border-radius: 4px;
-    margin-bottom: 10px;
-    transition: all 250ms ease-in-out;
+.inputSection {
+    margin-top: 2%;
+    min-height: 10%;
+    min-width: 19%;
+    width: inherit;
 }
 
-.heading {
-    margin-top: 0px;
-}
-
-.heading2 {
-    margin-top: 0px;
-    margin-bottom: 100px;
-    font-style: italic;
-    font-weight: normal;
-}
-
-.footer {
-    margin-bottom: 50px;
+.buttons {
+    display: flex;
+    margin-top: 15%;
+    justify-content: space-between;
 }
