--- a/client/src/views/DashboardView/DashboardView.module.css
+++ b/client/src/views/DashboardView/DashboardView.module.css
@@ -1,10 +1,16 @@
 /* container for the pfp*/
 .topcontainer {
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: 10vh;
     padding-top: 10px;
     padding-left: 10px;
+}
+
+.cog {
+    margin-top: 10px;
+    margin-left: 7px;
 }
 
 /* Container for the greeting, date, and link to all notes*/
