feat: add new note button

--- a/client/src/views/NotesView/NotesView.module.css
+++ b/client/src/views/NotesView/NotesView.module.css
@@ -7,6 +7,11 @@
     background-color: cadetblue;
 }
 
+.staticLeft {
+    display: flex;
+    flex-direction: row;
+}
+
 /* For the search bar and help (question mark) */
 .containerRight {
     padding-top: 20px;
