--- a/client/src/views/NotesView/NewNote.module.css
+++ b/client/src/views/NotesView/NewNote.module.css
@@ -2,7 +2,8 @@
 
 .container {
     margin-top: 8.5rem;
-    margin-left: 10vw;
+    margin-left: 2.5vw;
+    margin-right: 1.5vw;
     width: 160px;
 }
 
