--- a/client/src/components/Profile/Profile.module.css
+++ b/client/src/components/Profile/Profile.module.css
@@ -1,24 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
+
 /* Container for user profile */
 .horizontal {
-    white-space: nowrap;
+    margin-top: 20px;
+    margin-left: 20px;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-wrap: nowrap;
 }
 
 /* Profile picture */
 .image {
     width: 40px;
-    align-items: center;
-    justify-content: center;
 }
 
 /* User name */
 .text {
-    width: 70%;
-    display: flex;
-    flex-direction: row;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+    position: absolute;
+    margin-left: 40px;
     padding-left: 15px;
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 42.5px;
+    height: 42.5px;
 }
