--- a/client/src/components/Note/Note.module.css
+++ b/client/src/components/Note/Note.module.css
@@ -1,6 +1,23 @@
-.Segment{
-    width: 20vw;
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
+
+.container {
+    margin-right: 0.8vw;
+    margin-bottom: 0.8vw;
+    width: 170px;
 }
 
+.body {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    font-family: "Lato", sans-serif;
+    font-size: 15px;
+    color: #666666;
+    height: 150px;
+}
 
-
+.title {
+    font-weight: 700;
+    color: #212121;
+    margin-bottom: 5px;
+}
