feat: adjust sizing of dnd grid and reposition search bar

--- a/client/src/components/DnD/dragAndDrop.module.css
+++ b/client/src/components/DnD/dragAndDrop.module.css
@@ -1,13 +1,12 @@
 .notesSection {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 0.5rem;
 
     margin-top: 7.5rem;
     margin-bottom: 7.5rem;
     margin-left: 0rem;
     margin-right: -15rem;
-    width: 100%;
     padding: 0.5rem;
     border-radius: 10px;
 
