--- a/client/src/components/StandardNote/Note.module.css
+++ b/client/src/components/StandardNote/Note.module.css
@@ -1,7 +1,29 @@
 .outerContainer {
+    display: flex;
     width: 20vw;
+    flex-direction: column;
 }
 
-.Segment {
-    width: 20vw;
+.titleContainer {
+    display: flex;
+    flex-direction: column;
+}
+.noteContainer {
+    display: flex;
+    flex-direction: column;
+}
+.tagsContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.dateContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.eventContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
