--- a/client/src/components/Note/Note.module.css
+++ b/client/src/components/Note/Note.module.css
@@ -9,7 +9,7 @@
 .body {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     font-family: "Lato", sans-serif;
     font-size: 15px;
     color: #666666;
