--- a/client/src/views/NotesView/NewNote.module.css
+++ b/client/src/views/NotesView/NewNote.module.css
@@ -10,7 +10,7 @@
 .body {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     font-family: "Lato", sans-serif;
     font-size: 15px;
     color: #666666;
