--- a/client/src/views/DashboardView/DashboardView.module.css
+++ b/client/src/views/DashboardView/DashboardView.module.css
@@ -7,14 +7,15 @@
 }
 
 .cog {
-    margin-top: 10px;
-    margin-left: 7px;
+    margin-top: 20px;
+    margin-left: 27.5px;
 }
 
 /* Container for the greeting, date, and link to all notes*/
 .midContainer {
     display: flex;
     width: 73%;
+    margin-top: 7%;
     align-items: stretch;
     flex-direction: row;
     align-content: top;
@@ -43,7 +44,7 @@
 /* Container for event notes */
 .eventsContainer {
     display: flex;
-    width: 32%;
+    width: 45%;
     flex-direction: column;
     align-items: stretch;
 }
@@ -78,6 +79,7 @@
 .tumbtackContainer {
     display: flex;
     width: 5%;
+    margin-right: 13px;
 }
 
 /* eventNote box*/
@@ -111,6 +113,7 @@
     width: 62%;
     flex-direction: row-reverse;
     align-items: center;
+    margin-right: 6%;
 }
 
 .greetingsContainer {
@@ -126,6 +129,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.greeting {
+    font-size: 40px;
+    line-height: 50px;
+    width: 300px;
 }
 
 .date {
