feat: add all button symbols and format note

--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -13,6 +13,8 @@
     --colour-yellow: #f5e8d7;
     --colour-background: #e4e5ed;
     --colour-background-dark: #586583;
+    --colour-darkgray: #6e6e6e;
+    --colour-orange-accent: #ed7b07;
     --colour-gradientBG: linear-gradient(#f0e4f0, #ebe4ed, #e4e5ed);
 
     --font-family: "Lato", sans-serif;
