--- a/client/src/components/ContentText/ContentText.module.css
+++ b/client/src/components/ContentText/ContentText.module.css
@@ -1,32 +1,29 @@
 @import "../../App.module.css";
 
-.title {
+.content {
     font-family: var(--font-family);
-    /* font-size: var(--text-big); */
-    font-size: 2vw;
-    font-weight: bold;
 }
 
 /* phone size */
 @media only screen and (max-width: 500px) {
-    .title {
-        font-size: var(--text-small);
+    .content {
+        font-size: 10px;
         line-height: 3ch;
     }
 }
 
 /* iPad size */
 @media only screen and (min-width: 1024px) {
-    .title {
-        font-size: var(--text-medium);
+    .content {
+        font-size: var(--text-small);
         line-height: 3ch;
     }
 }
 
 /* desktop size */
 @media only screen and (min-width: 1025px) {
-    .title {
-        font-size: 20px;
+    .content {
+        font-size: var(--text-small);
         line-height: 3ch;
     }
 }
