--- a/client/src/components/StandardDetailNote/StandardDetailNote.module.css
+++ b/client/src/components/StandardDetailNote/StandardDetailNote.module.css
@@ -1,3 +1,5 @@
+@import "../../App.module.css";
+
 .Segment {
     width: 65vw;
     height: 50vh;
@@ -8,15 +10,52 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 5ch;
+    height: 5vh;
+    padding: 1vw;
+}
+
+.thumbtack {
+    color: var(--colour-darkgray);
 }
 
 .middle {
-    line-height: 1ch;
-    padding-top: 1ch;
-    padding-bottom: 3ch;
     height: 60vh;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    padding-top: 15px;
+    overflow-wrap: break-word;
 }
 
 .bottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 1vw;
+    /* background-color: lightsalmon; */
+}
+
+.leftBottom {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
+.editRow {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+    color: var(--colour-orange-accent);
+}
+
+.editText {
+    color: var(--colour-darkgray);
+    font-size: var(--text-small);
+}
+
+.rightBottom {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    color: var(--colour-darkgray);
 }
