--- a/client/src/components/StandardNote/Note.module.css
+++ b/client/src/components/StandardNote/Note.module.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
 }
-.tagsContainer {
+.tagContainer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
