--- a/client/src/components/StandardNote/Note.module.css
+++ b/client/src/components/StandardNote/Note.module.css
@@ -16,14 +16,17 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    font-size: 80%;
 }
-.dateContainer {
+.timeContainer {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    font-size: 80%;
 }
 .eventContainer {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    font-size: 80%;
 }
