--- a/client/src/views/SettingsView/ColourBlocks.module.css
+++ b/client/src/views/SettingsView/ColourBlocks.module.css
@@ -16,6 +16,26 @@
     margin-top: 0;
 }
 
+.light {
+    background-color: aliceblue;
+    margin-top: -3%;
+    margin-left: -5%;
+    width: 109%;
+    height: 110%;
+    border-radius: 3%;
+    border-style: rounded;
+    border-width: 2px;
+    border-color: #e0e0e0;
+}
+
+.light {
+    margin-top: -3%;
+    margin-left: -5%;
+    width: 109%;
+    height: 110%;
+    border-radius: 3%;
+}
+
 .checkbox {
     display: flex;
 }
