--- a/client/src/views/SettingsView/Forms.module.css
+++ b/client/src/views/SettingsView/Forms.module.css
@@ -4,22 +4,22 @@
 
 .formheading {
     margin-left: 10px;
-    margin-bottom: 15px;
 }
 
 .formtitle {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
     margin-bottom: -10px;
-    display: grid;
-    grid-template-columns: 70% 30%;
+    margin-left: 11px;
     font-size: 20px;
 }
 
-.formfield {
-    margin-top: 0px;
-    font-size: 14px;
-    color: gray;
-}
-
-.formtitletext {
-    font-size: 15px;
+.field {
+    margin-bottom: 35px;
+    display: flex;
+    flex-direction: row;
+    width: 60%;
+    justify-content: space-between;
 }
