--- a/client/src/components/StandardNote/Note.module.css
+++ b/client/src/components/StandardNote/Note.module.css
@@ -4,6 +4,11 @@
     flex-direction: column;
 }
 
+.pinContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
 .titleContainer {
     display: flex;
     flex-direction: column;
