--- a/client/src/components/StandardNote/StandardNote.module.css
+++ b/client/src/components/StandardNote/StandardNote.module.css
@@ -3,13 +3,21 @@
     width: 20vw;
     flex-direction: column;
 }
-
 .pinContainer {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
+.topContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 .titleContainer {
+    display: flex;
+    flex-direction: column;
+}
+.pinContainer {
     display: flex;
     flex-direction: column;
 }
@@ -21,17 +29,14 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    font-size: 80%;
 }
 .timeContainer {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    font-size: 80%;
 }
 .eventContainer {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    font-size: 80%;
 }
