--- a/client/src/components/Time/Time.module.css
+++ b/client/src/components/Time/Time.module.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 
-.tag {
+.time {
     font-family: "Lato", sans-serif;
-    font-size: 80%;
+    font-size: 12px;
     color: #333333;
 }
