--- a/client/src/views/DashboardView/DashboardView.module.css
+++ b/client/src/views/DashboardView/DashboardView.module.css
@@ -155,3 +155,9 @@
     margin-top: 0px;
     margin-bottom: 20px;
 }
+
+.installPrompt {
+    color: #707070;
+    margin-top: 8%;
+    display: flex;
+}
