--- a/client/src/views/DashboardView/DashboardView.module.css
+++ b/client/src/views/DashboardView/DashboardView.module.css
@@ -9,6 +9,17 @@
     margin-left: 30px;
 }
 
+.noNotes {
+    font-family: "Lato", sans-serif;
+    font-size: 17px;
+    color: #707070;
+    display: flex;
+    flex-direction: row;
+    width: 98%;
+    margin-top: 5px;
+    margin-left: 10px;
+}
+
 /* Container for the greeting, date, and link to all notes*/
 .midContainer {
     display: flex;
