--- a/client/src/views/SettingsView/SettingsView.module.css
+++ b/client/src/views/SettingsView/SettingsView.module.css
@@ -46,14 +46,55 @@
 }
 
 .personal {
-    display: grid;
-    grid-template-columns: 40% 60%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .forms {
     height: 70%;
+    width: 40%;
 }
 
 .backbutton {
     margin-top: 10px;
+}
+
+.form {
+    margin-bottom: 10px;
+}
+
+.formheading {
+    margin-left: 10px;
+}
+
+.formtitle {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    margin-bottom: -10px;
+    margin-left: 11px;
+    font-size: 20px;
+}
+
+.field {
+    margin-bottom: 35px;
+    display: flex;
+    flex-direction: row;
+    width: 60%;
+    justify-content: space-between;
+}
+
+.image {
+    width: 120px;
+}
+
+.profilePic {
+    width: 40%;
+    height: 100%;
+}
+
+.profileTitle {
+    font-size: 20px;
+    margin-bottom: 40px;
 }
