--- a/client/src/components/ContentText/ContentText.module.css
+++ b/client/src/components/ContentText/ContentText.module.css
@@ -1,7 +1,12 @@
 @import "../../App.module.css";
 
-.content {
+.standardDetailNote {
     font-family: var(--font-family);
+}
+
+.emptyEditMode {
+    color: gray;
+    padding-top: 5px;
 }
 
 /* phone size */
