--- a/client/src/components/EditNote/EditNote.module.css
+++ b/client/src/components/EditNote/EditNote.module.css
@@ -7,16 +7,27 @@
 .wholeContainer {
     display: flex;
     flex-direction: row;
-    height: 40vh;
+    height: 35vh;
 }
 
 .leftContainer {
-    /* background-color: pink; */
-    flex-basis: 70%;
+    flex-basis: 75%;
+    overflow: scroll;
+    direction: rtl;
+    overflow-x: hidden;
 }
 
 .title {
     padding: 1vw;
+    direction: ltr;
+}
+
+.content {
+    /* height: 40vh; */
+    overflow-wrap: anywhere;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    direction: ltr;
 }
 
 .rightContainer {
@@ -24,8 +35,7 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: space-around;
-    /* background-color: antiquewhite; */
-    flex-basis: 30%;
+    flex-basis: 25%;
 }
 
 .doneRow {
