--- a/client/src/components/Note/Edit/EditNote.module.css
+++ b/client/src/components/Note/Edit/EditNote.module.css
@@ -1,4 +1,4 @@
-@import "../../App.module.css";
+@import "../../../App.module.css";
 
 .Segment {
     width: 60vw;
@@ -10,20 +10,21 @@
     height: 35vh;
 }
 
-.leftContainer {
+.scroll {
     flex-basis: 75%;
     overflow: scroll;
     direction: rtl;
     overflow-x: hidden;
 }
 
-.title {
-    padding: 1vw;
+.body {
     direction: ltr;
 }
 
 .content {
     /* height: 40vh; */
+    color: gray;
+    padding-top: 5px;
     overflow-wrap: anywhere;
     padding-left: 1vw;
     padding-right: 1vw;
@@ -52,15 +53,27 @@
     font-size: var(--text-medium);
 }
 
-.fillerContainer {
-    flex-basis: 27%;
-}
-
 .buttonRows {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     justify-content: space-around;
     flex-basis: 60%;
+    margin-top: 20%;
     justify-content: space-around;
+}
+
+.title {
+    padding: 1vw;
+    direction: ltr;
+    font-family: var(--font-family);
+    font-size: 2vw;
+    font-weight: bold;
+}
+
+.button {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    color: gray;
 }
