--- a/client/src/views/DashboardView/DashboardView.module.css
+++ b/client/src/views/DashboardView/DashboardView.module.css
@@ -9,6 +9,10 @@
     margin-left: 30px;
 }
 
+.pinnedSpacer {
+    margin-right: 22px;
+}
+
 .noNotes {
     font-family: "Lato", sans-serif;
     font-size: 17px;
