--- a/client/src/components/Note/Note.module.css
+++ b/client/src/components/Note/Note.module.css
@@ -23,11 +23,8 @@
 }
 
 .tag {
+    font-size: 13px;
     display: flex;
     flex-direction: row;
     margin-top: 10px;
-}
-
-.tagText {
-    margin-left: 5px;
 }
