--- a/client/src/components/Note/editNote.module.css
+++ b/client/src/components/Note/editNote.module.css
@@ -8,7 +8,7 @@
 }
 
 .editNoteWrapper {
-    position: fixed;
+    position: absolute;
     width: 750px;
     height: 750px;
     background: white;
