--- a/client/src/components/Note/Note.module.css
+++ b/client/src/components/Note/Note.module.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
+@import "../../App.module.css";
 
 .container {
     margin-right: 0.8vw;
@@ -27,4 +28,15 @@
     display: flex;
     flex-direction: row;
     margin-top: 10px;
+}
+
+.time {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 3px;
+    height: 20px;
+    color: var(--colour-darkgray);
+    font-size: 11px;
+    line-height: 20px;
 }
