--- a/client/src/components/Note/Standard/StandardNote.module.css
+++ b/client/src/components/Note/Standard/StandardNote.module.css
@@ -33,10 +33,7 @@
 .timeContainer {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-}
-.eventContainer {
-    display: flex;
-    flex-direction: column;
+    margin-top: 10px;
+    justify-content: flex-end;
     align-items: flex-end;
 }
