--- a/client/src/components/Note/Edit/EditNote.module.css
+++ b/client/src/components/Note/Edit/EditNote.module.css
@@ -64,9 +64,11 @@
 }
 
 .content {
-    /* height: 40vh; */
+    display: flex;
+    flex-direction: column;
+    align-items: space-between;
     color: gray;
-    padding-top: 5px;
+    margin-top: 10px;
     overflow-wrap: anywhere;
     padding-right: 1vw;
     direction: ltr;
