--- a/client/src/components/Note/Edit/EditNote.module.css
+++ b/client/src/components/Note/Edit/EditNote.module.css
@@ -1,6 +1,9 @@
 @import "../../../App.module.css";
 
 .Segment {
+    margin-top: 18.5%;
+    margin-left: 15px;
+    margin-right: 14px;
     width: 60vw;
 }
 
@@ -50,8 +53,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    justify-content: space-around;
-    flex-basis: 60%;
+    height: 110px;
     margin-top: 20%;
     justify-content: space-around;
 }
@@ -79,4 +81,15 @@
     flex-direction: row;
     gap: 5px;
     color: gray;
+}
+
+.timePicker {
+    display: flex;
+    align-items: center;
+}
+
+.addTag {
+    display: flex;
+    line-height: 5px;
+    align-items: center;
 }
