--- a/client/src/views/NotesView/NewNote/NewNote.module.css
+++ b/client/src/views/NotesView/NewNote/NewNote.module.css
@@ -7,6 +7,11 @@
     width: 170px;
 }
 
+.edit {
+    width: fit-content;
+    height: fit-content;
+}
+
 .body {
     display: flex;
     flex-direction: column;
