--- a/client/src/components/Note/Edit/EditNote.module.css
+++ b/client/src/components/Note/Edit/EditNote.module.css
@@ -1,7 +1,7 @@
 @import "../../../App.module.css";
 
 .Segment {
-    margin-top: 18.5%;
+    margin-top: 8.8rem;
     margin-left: 15px;
     margin-right: 14px;
     width: 60vw;
