--- a/client/src/components/Note/DashboardEvent/ExpandedEvent.module.css
+++ b/client/src/components/Note/DashboardEvent/ExpandedEvent.module.css
@@ -54,6 +54,8 @@
     display: flex;
     width: 100%;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 
 .goToNote {
@@ -84,4 +86,11 @@
 
 .space {
     width: 5px;
+}
+.timeContainer {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
