--- a/client/src/views/DashboardView/DashboardView.module.css
+++ b/client/src/views/DashboardView/DashboardView.module.css
@@ -38,6 +38,7 @@
 .bottomContainer {
     display: flex;
     width: 75%;
+    margin-left: -8%;
     flex-direction: row;
 }
 
@@ -113,7 +114,7 @@
     width: 100%;
     flex-direction: row-reverse;
     align-items: center;
-    margin-right: -2%;
+    margin-right: 4%;
 }
 
 .greetingsContainer {
