feat: add delete button to standard expanded note

--- a/client/src/components/Note/StandardDetail/StandardDetailNote.module.css
+++ b/client/src/components/Note/StandardDetail/StandardDetailNote.module.css
@@ -45,3 +45,9 @@
     left: -12px;
     top: -12px;
 }
+
+.bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
