feat: hide overflow text in standard note view

--- a/client/src/components/Note/Standard/StandardNote.module.css
+++ b/client/src/components/Note/Standard/StandardNote.module.css
@@ -23,6 +23,9 @@
 }
 .noteContainer {
     display: flex;
+    white-space: pre-line;
+    overflow: hidden;
+    max-height: 70px;
     flex-direction: column;
 }
 .tagContainer {
