feat: add padding to hide clipping in edges of dnd notes area

--- a/client/src/views/NotesView/DnD/dragAndDrop.module.css
+++ b/client/src/views/NotesView/DnD/dragAndDrop.module.css
@@ -12,7 +12,7 @@
 }
 
 .scroll {
-    margin-top: 52.3px;
+    margin-top: 42.3px;
     margin-right: 45px;
     width: 92.5%;
     overflow: scroll;
@@ -23,6 +23,8 @@
 }
 
 .dndContainer {
+    padding-top: 10px;
+    padding-left: 10px;
     width: 80%;
 }
 
